@@ -31,6 +31,7 @@
 /* comma-separated "-quoted list, duplicate-free */
 #define SCOREP_OPENMP_FLAGS_ALL @SCOREP_OPENMP_FLAGS_ALL@
 
+#define SCOREP_OMPT_CFLAGS "@SCOREP_OMPT_CFLAGS@"
 #define SCOREP_OMPT_LDFLAGS "@SCOREP_OMPT_LDFLAGS@"
 
 #define OPARI                "@OPARI2_BINDIR@/opari2"
